feat:매니패스트

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "orientation": "portrait",
   "scope": "/",
   "short_name": "붙임머리 숱추가 계산기",
-  "start_url": "/",
+  "start_url": "https://mooggem.shop/",
   "theme_color": "#ffefc4",
   "icons": [
     {
